# HuaJuan

./: ChatLogGenerator.java  README.md  README_INLINE_ASSETS.md  all_commit_history.txt  settings.gradle.kts  侧边栏设计文档.md  参考本地模型调用方式.kt  参考模型调用代码.kt  应用设计文档.md  模型列表.md  项目文档.md
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/chenhongyu/huajuan/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/ai_templates/: card.html  classic.html  dialog.html  poem.html  poem_card.html  simple_card.html
app/src/main/cpp/: CMakeLists.txt  llm_mnn_jni.cpp  llm_session.cpp  local_model_jni.cpp
app/src/main/java/: CPP_ARCHITECTURE.md
app/src/main/java/com/chenhongyu/huajuan/: AICreationScreen.kt  AgentScreen.kt  ChatScreen.kt  ImageSelectorScreen.kt  ImageUploadFeature.kt  ImageUploadHandler.kt  MainActivity.kt  Screens.kt  SettingScreen.kt  SideDrawer.kt  TimeUtils.kt
app/src/main/java/com/chenhongyu/huajuan/components/: ExpandedInputComponents.kt
app/src/main/java/com/chenhongyu/huajuan/data/: AICreationDao.kt  AICreationEntity.kt  Agent.kt  AgentProvider.kt  AppDatabase.kt  AppPreferences.kt  ChatHistoryManager.kt  ConversationDao.kt  ConversationEntity.kt  Converters.kt  HtmlTemplateEngine.kt  HtmlToBitmapRenderer.kt  ImageGenerationApiService.kt  ImageStorage.kt  LocalModelApiService.kt  MessageDao.kt  MessageEntity.kt  ModelApiFactory.kt  ModelApiService.kt  ModelData.kt  ModelManager.kt  Models.kt  OnlineModelApiService.kt  Repository.kt
app/src/main/java/com/chenhongyu/huajuan/network/: ApiService.kt  GenerateProgressListener.kt  LlmSession.kt
app/src/main/java/com/chenhongyu/huajuan/render/: HtmlRenderAndSave.kt  HtmlRenderer.kt  HtmlTemplateFiller.kt  UnsplashFetcher.kt
app/src/main/java/com/chenhongyu/huajuan/share/: ShareHelper.kt
app/src/main/java/com/chenhongyu/huajuan/storage/: ImageSaver.kt
app/src/main/java/com/chenhongyu/huajuan/stream/: ChatEvent.kt
app/src/main/java/com/chenhongyu/huajuan/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/chenhongyu/huajuan/utils/: ImageListUtils.kt  ImageUtils.kt  ThinkTagProcessor.kt
app/src/main/java/com/chenhongyu/huajuan/workers/: GenerationWorker.kt  GenerationWorkerImpl.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/chenhongyu/huajuan/: ExampleUnitTest.kt
docs/: 历史对话部分功能项目文档.md  行数统计.ps1
docs/参考/: 对话转图片参考.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: inline_assets.py
